<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        style="@style/MyViewsLeftRightTopMargins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_main_quiz_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_main_bottom"
            android:layout_marginTop="@dimen/margin_main_top"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_main_quiz_reset"
            style="@style/MyButtons"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/textview_main_quiz_summary"
            android:background="@drawable/button_rounded_corner"
            android:onClick="resetQuiz"
            android:text="@string/main_quiz_reset"
            android:textColor="@color/colorButtonText" />

        <Button
            android:id="@+id/button_main_quiz_view_answers"
            style="@style/MyButtons"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textview_main_quiz_summary"
            android:background="@drawable/button_rounded_corner"
            android:onClick="displayQuizAnswers"
            android:text="@string/main_quiz_answers"
            android:textColor="@color/colorButtonText" />

        <Button
            android:id="@+id/button_main_quiz_submit"
            style="@style/MyButtons"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_below="@id/textview_main_quiz_summary"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_rounded_corner"
            android:onClick="computeQuizScore"
            android:text="@string/main_quiz_submit"
            android:textColor="@color/colorButtonText" />

    </RelativeLayout>

</merge>